--- a/package.json
+++ b/package.json
@@ -33,16 +33,27 @@
     "@types/react-router-dom": "^5.1.0",
     "@types/reflexbox": "^4.0.0",
     "@types/styled-components": "^4.1.19",
+    "@typescript-eslint/parser": "^2.3.1",
     "autoprefixer": "^9.6.1",
+    "babel-eslint": "^10.0.3",
     "babel-loader": "^8.0.6",
     "babel-plugin-styled-components": "^1.10.6",
     "babel-plugin-transform-builtin-extend": "^1.1.2",
+    "clean-webpack-plugin": "^3.0.0",
+    "compression-webpack-plugin": "^3.0.0",
     "connected-react-router": "^6.5.2",
     "css-loader": "^3.2.0",
     "dotenv-webpack": "^1.7.0",
+    "eslint-plugin-babel": "^5.3.0",
+    "eslint-plugin-import": "^2.18.2",
+    "eslint-plugin-react": "^7.14.3",
+    "eslint-plugin-react-hooks": "^2.0.1",
+    "eslint-plugin-typescript": "^0.14.0",
+    "favicons-webpack-plugin": "^1.0.2",
     "history": "^4.10.1",
     "html-webpack-plugin": "^3.2.0",
     "lodash": "^4.17.15",
+    "mini-css-extract-plugin": "^0.8.0",
     "node-sass": "^4.12.0",
     "postcss-loader": "^3.0.0",
     "react": "^16.9.0",
@@ -59,6 +70,7 @@
     "sass-loader": "^8.0.0",
     "style-loader": "^1.0.0",
     "styled-components": "^4.4.0",
+    "uglifyjs-webpack-plugin": "^2.2.0",
     "webpack": "^4.41.0",
     "webpack-bundle-analyzer": "^3.5.2",
     "webpack-cli": "^3.3.9",
