--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "react-hot-loader": "^4.12.14",
+    "react-icons": "^3.7.0",
     "react-redux": "^7.1.1",
     "react-router-dom": "^5.1.0",
     "react-universal-component": "^4.0.0",
