added first form

--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@types/reflexbox": "^4.0.0",
     "@types/styled-components": "^4.1.19",
     "@typescript-eslint/parser": "^2.3.1",
+    "apollo-boost": "^0.4.4",
     "autoprefixer": "^9.6.1",
     "babel-eslint": "^10.0.3",
     "babel-loader": "^8.0.6",
@@ -50,6 +51,7 @@
     "eslint-plugin-react-hooks": "^2.0.1",
     "eslint-plugin-typescript": "^0.14.0",
     "favicons-webpack-plugin": "^1.0.2",
+    "graphql": "^14.5.8",
     "history": "^4.10.1",
     "html-webpack-plugin": "^3.2.0",
     "lodash": "^4.17.15",
