--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "build": "webpack --config webpack-build.config.js"
   },
   "dependencies": {
+    "@apollo/react-components": "^3.1.1",
+    "@apollo/react-hooks": "^3.1.1",
     "@babel/core": "^7.6.2",
     "@babel/plugin-proposal-class-properties": "^7.5.5",
     "@babel/plugin-proposal-decorators": "^7.6.0",
